# manhattan-vision

./: README.md
cmake_modules/: FindCairomm.cmake
config/: common.cfg
config/cameras/: quickcam.cfg
config/kinect_calibration/: calibration_rgb.yaml  kinect_params.yaml
indoor_context/config/: common.cfg
indoor_context/config/cameras/: tz3_dist_err029.cfg  tz3_nodist_err048.cfg
indoor_context/config/kinect_calibration/: calibration_depth.yaml
indoor_context/matlab/: write_orients.m
indoor_context/matlab/EmpiricalRisk/: evaluate_manhattan_dp.m
indoor_context/matlab/MatlabUtils/: brief_disp.m  check.m  imshowall.m  (+2 more)
indoor_context/source/: ATANCamera.h  CMakeLists.txt  bld_helpers.cpp  building_features.h  camera.cpp  camera.h  canny.cpp  clipping.h  colors.cpp  counted_foreach.tpp  dp_check_features.mex.cpp  dp_payoffs.h  dp_solve.mex.cpp  dp_structures.cpp  filters.h  find_vpts_mono.mex.cpp  gaussian_pyramid.cpp  geom_utils.h  guided_line_detector.cpp  histogram.tpp  hw_convolver.h  image_bundle.h  image_utils.cpp  interactive_quad_widget.h  joint_payoffs.cpp  kinect_device.cpp  kinect_device.h  kinect_transform.cpp  kinect_transform.hpp  likelihoods.cpp  line_sweep_features.cpp  line_sweeper.cpp  logtest.mex.cpp  manhattan_bnb.cpp  manhattan_dp.cpp  manhattan_ground_truth.h  map.proto  matlab_sink.h  mex_output_test.mex.cpp  mextest.c  (+17 more)
matlab/: Direct.m  orientim.m  test.m
matlab/EmpiricalRisk/: manhattan_optimization_bounds.m
matlab/MatlabUtils/: default.m  describe_var.m  is_simple_expression.m  report.m  strsplit.m  summ.m
matlab/MaxLikelihood/: compute_loglik.m  get_executable_dir.m.tpl  get_path.m  occlusion_is_valid.m  test_loglik_jacs.m  verify_jacobians.m
matlab/ShortestPathLearning/: solve_shortest_path.m
matlab/StructuredPrediction/: get_score.m  loadmore.m  make_contra_objective.m  pack_weights.m  unpack_weights.m
source/: ATANCamera.cpp  ATANCamera.h  CMakeLists.txt  approx_camera.cpp  args_meta.h  array_test.cpp  backup_manhattan_dp.cpp  bld_helpers.cpp  bld_helpers.h  boost_foo.cpp  bootstrap_train_dp.cpp  building_estimator.cpp  building_estimator.h  building_features.cpp  building_features.h  cairo_test.cpp  camera.cpp  camera.h  canny.cpp  canny.h  canonical_image.cpp  canvas.cpp  canvas.h  canvas.tpp  check.cpp  check.tpp  clip3d_test.cpp  clip_test.cpp  clipping.cpp  clipping.h  clipping3d.h  clipping3d.tpp  colored_points.h  colors.cpp  colors.h  common_types.h  common_types_entry.h  common_types_vw.h  compatibility.mex.cpp  compute_loglik.cpp  (+283 more)
source/base/: check.cpp  check.tpp  common_types.h  log.cpp  log.tpp  matrix_types.h  numeric_utils.cpp  numeric_utils.h  progress_reporter.h  range_utils.tpp  report.cpp  report.tpp  thread_pool.cpp  thread_pool.h  timer.cpp  timer.h  vararg_utils.cpp  vars.cpp  vector_utils.cpp  vector_utils.h  vector_utils.tpp  worker.cpp  worker.h
source/learning/: auto_indent.py  data_generation.py  diagonal.py  dpsum.py  evaluate_eccv2010.py  evaluate_iccv.py  evaluate_manual.py  foo_loss.py  ftr_test.py  manhattan_utils.py  mm_manhattan.py  mmdegenerate.py  mmdiagonal.py  mmhmm.py  mmsyntheticdiagonal.py  path.py  proto_utils.py  qp.py  run_training.sh  test_cutoff.py  test_ftrs.py  test_loss.py  test_manhattan.py  test_mono.py  test_render.py  test_reporting.py  test_score.py  time_ftrs.py  training_helpers.py  training_params.py  viterbi.py  worklog.txt
source/learning/plotting/: assemble_frames.py  assemble_gt.py  comparative_scatter.py  compile_comparison.py  compute_sequence_performance.py  generate_perf_table.py  psi_evolution.py  stuff.py  suggest_examples.py
source/matlab/: check.m  create_contra_objective.m  create_objective.m  create_solution.m  dp_test.cpp  evaluate.m  evaluate_manhattan_dp.m  get_accuracy.m  get_loss.m  get_path_score.m  get_pixel_loss.m  get_psi.m  get_score.m  imshowall.m  is_simple_expression.m  launch_optimization.m  launch_optimization_direct.m  learn_manhattan_dp.m  load1.m  make_solution.m  manhattan_optimization_bounds.m  manhattan_tests.m  orientim.m  recon_speedtest.m  recon_test.m  reconstruct.m  showcases.m  showpath.m  shuffle.m  test.m  write_orients.m
source/matlab/EmpiricalRisk/: manhattan_optimization_bounds.m
source/matlab/Manhattan/: compute_loglik.m  compute_pfz.m  compute_posteriors.m  compute_pzth.m  make_geometry.m  make_model.m  minimize_risk.m  mock_compute_ftr_loglik.m  numeric_derivative.m  test_loglik_jacs.m  unpack_linear_model.m
source/matlab/MatlabUtils/: brief_disp.m  check.m  default.m  imshowbig.m
source/matlab/MaxLikelihood/: compute_loglik.m  launch_optimization.m  loglik_bounds.m  mock_compute_model_loglik.m  naive_minimize_risk.m  run_executable.m
source/matlab/SAT/: dpll.m  eval_proposition.m  naive_sat.m
source/matlab/StructuredPrediction/: learn_manhattan_dp.m  mock_weights.m  unittests.m
source/progs/: CMakeLists.txt  add_painting.cpp  approx_camera.cpp  bind_test.cpp  brostow.cpp  calibrate_vpts.cpp  compute_loglik.cpp  compute_payoff_features.cpp  consensus_vpts.cpp  cvpr_video.cpp  dp_optimization_wrapper.cpp  draw_pts.cpp  draw_sweeps.cpp  edit_floorplan.cpp  estimate_manhattan_orient.cpp  estimate_sim_rotation.cpp  estimate_vpts.cpp  evaluate_mv.cpp  explie.cpp  export_floorplan.cpp  export_training_data.cpp  expr_test.cpp  fast_orients.cpp  feature_dp.cpp  find_vpts.cpp  frame_line_sweeper.cpp  frame_vpts.cpp  generate_video.cpp  glut_test.cpp  heh_features.cpp  jac_test.cpp  joint_dp.cpp  kinect_dp.cpp  label_planes.cpp  learn_textons.cpp  legend.cpp  lie_est.cpp  map_textons.cpp  map_viewer.cpp  match_spix.cpp  (+25 more)
source/proto/: CMakeLists.txt  map.proto  model.proto  payoffs.proto  training.proto  vector.proto
source/pywrappers/: numpy_conversions.cpp  numpy_conversions.h  numpy_helpers.cpp  numpy_helpers.h  training.cpp  training.h  training_wrappers.cpp
source/visualization/: clipping3d.tpp  colored_points.cpp  floorplan_editor.cpp  floorplan_editor.h  gl_utils.cpp  glut_window.cpp  hotspot.cpp  hotspot.h  map_widgets.cpp  texture_manager.cpp  texture_manager.h  viewer3d.cpp  viewer3d.h  widget3d.cpp
(+50 files in other folders)
